# iesor-physics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json  winControl.js  winServer.js
Data/: sampleBody224632.json
HelloIESoR/: CMakeLists.txt  HelloIESoR.cpp
IESoR/: CMakeLists.txt
IESoR/Construction/Bodies/: outputsToBodies.cpp
IESoR/Construction/GPU/: gpuBodyBuilder.cpp  gpuBodyBuilder.h
IESoR/Simulation/: iesorWorld.cpp  iesorWorld.h
IESoR/Simulation/Initialize/: initializeWorld.cpp  initializeWorld.h
IESoR/Simulation/Record/: recordWorld.cpp  recordWorld.h
JSON/: CMakeLists.txt  json.h
JSON/src/: json_reader.cpp
Old/: CMakeLists.txt
Old/Physics/: CMakeLists.txt
Old/Physics/Data/: basic.json  jsGenome224632.json
Old/Physics/HelloIESoR/: CMakeLists.txt
Old/Physics/IESoR/: iesor.h
Old/Physics/IESoR/Network/: iesorBody.cpp
Old/Physics/IESoR/Simulation/: iesorWorld.cpp
Old/Physics/JSON/: json.h
Old/UI/: CMakeLists.txt
Old/UI/QtFabric/: CMakeLists.txt
Old/UI/QtFabric/Resources/html/js/gpu/: simpleGPU.html
Old/UI/QtFabric/bridge/: JSBridge.h  QtWINSocket.h
Old/UI/QtFabric/json/: SimpleJson.cpp
Old/scripts/: ngCreateJSGenome.js  nodeScan.js  parseTestBodies.js
Physics/Data/: basic.json
Physics/HelloIESoR/: CMakeLists.txt  HelloIESoR.cpp
Physics/IESoR/: CMakeLists.txt  iesor.h
Physics/IESoR/Construction/Bodies/: outputsToBodies.cpp  outputsToBodies.h
Physics/IESoR/Construction/GPU/: gpuBodyBuilder.h
Physics/IESoR/Network/: iesorBody.cpp  iesorBody.h  network.cpp  network.h
Physics/IESoR/Simulation/: iesorWorld.cpp  iesorWorld.h
Physics/IESoR/Simulation/Initialize/: initializeWorld.cpp  initializeWorld.h
Physics/JSON/: CMakeLists.txt  json.h
Physics/JSON/src/: json_reader.cpp  json_value.cpp  json_writer.cpp
Simulation/: .gitignore
Simulation/IESoR/: iesor.gyp
Simulation/IESoR/Network/: iesorBody.cpp  iesorBody.h  network.cpp
Simulation/IESoR/Simulation/: iesorDirector.cpp  iesorDirector.h  iesorWorld.cpp  iesorWorld.h
Simulation/node-iesor/: binding.gyp
Simulation/node-iesor/src/: worldWrapper.cpp  worldWrapper.h
Simulation/node-iesor/test/: iesorExample.js
UI/: CMakeLists.txt  iesorUI.html  uiServer.js
UI/QtFabric/: CMakeLists.txt  main.cpp
UI/QtFabric/Resources/: qtfabric.qrc
UI/QtFabric/Resources/html/: basic.html
UI/QtFabric/Resources/html/js/gpu/: component.json  gpu.js  gpuTest.js  simpleGPU.html  simpleGPUjs.js  watchBuild.js
UI/QtFabric/bridge/: JSBridge.cpp  JSBridge.h  QtWINSocket.cpp
UI/QtFabric/json/: SimpleJson.cpp  SimpleJson.h
UI/QtFabric/view/: qtfabric.cpp  qtfabric.h
WIN/: winControl.js  worldCreator.js
scripts/: ngConvert.js  ngCreateJSGenome.js  nodeScan.js  parseTestBodies.js
